# WindOS

./: .gdb_history  .gitignore  Cargo.toml  LICENSE.md  README.md  rustfmt.toml
.cargo/: config.toml
kernel/: Cargo.toml
kernel/src/: addr.rs  boot_allocator.rs  logging.rs  main.rs
linker-script/: kernel-qemu-virt.lds  prekernel-qemu-virt.lds
prekernel/: Cargo.toml
prekernel/src/: boot.asm  boot_allocator.rs  loader.rs  logging.rs  main.rs  page_table.rs  panic.rs
src/: boot_allocator.rs  logging.rs  main.rs  panic.rs  utils.rs
src/asm/: boot.asm  mod.rs
src/linker/: qemu-virt.lds
